plugins {
    id 'org.springframework.boot' version '2.6.4'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
    id 'war'
    id 'com.github.sherter.google-java-format' version '0.9'
}

war {
    enabled = false
}

group = 'ar.com.gtsoftware'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
    developmentOnly
    runtimeClasspath {
        extendsFrom developmentOnly
    }
}

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url "https://jaspersoft.jfrog.io/jaspersoft/third-party-ce-artifacts"
    }
}

dependencies {
    //implementation 'org.springframework.boot:spring-boot-dependency-tools'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    //implementation 'org.springframework.boot:spring-boot-starter-undertow'
    implementation 'org.springframework.boot:spring-boot-starter-web-services'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-logging'
    implementation 'org.springframework.ws:spring-ws-security'
    implementation 'org.springframework.ws:spring-ws-core'
    testImplementation 'org.springframework.ws:spring-ws-test'
    implementation 'org.glassfish.jaxb:jaxb-runtime'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.postgresql:postgresql:42.2.11'
    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }
    compileOnly 'org.projectlombok:lombok:1.18.12'
    annotationProcessor 'org.projectlombok:lombok:1.18.12'
    testCompileOnly 'org.projectlombok:lombok:1.18.12'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'

    implementation 'io.jsonwebtoken:jjwt:0.9.1'
    implementation 'org.apache.commons:commons-lang3:3.9'
    implementation 'org.apache.commons:commons-collections4:4.4'
    compileOnly 'org.hibernate:hibernate-jpamodelgen:5.4.12.Final'
    annotationProcessor 'org.hibernate:hibernate-jpamodelgen'
    implementation 'org.liquibase:liquibase-core'
    compileOnly 'org.mapstruct:mapstruct:1.3.1.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.3.1.Final'
    testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.3.1.Final'
    implementation 'org.bouncycastle:bcprov-jdk15to18:1.65'
    implementation 'org.bouncycastle:bcpkix-jdk15to18:1.65'
    implementation 'net.sf.jasperreports:jasperreports:6.9.0'
    implementation 'net.sf.jasperreports:jasperreports-fonts:6.0.0'
    implementation 'com.lowagie:itext:2.1.7'
    implementation 'net.sf.barcode4j:barcode4j:2.1'
    implementation 'org.apache.xmlgraphics:batik-bridge:1.13'
    implementation 'org.jeasy:easy-rules-core:4.0.0'
    implementation 'org.jeasy:easy-rules-mvel:4.0.0'
    implementation 'org.apache.poi:poi-ooxml:5.0.0'
    implementation 'com.lowagie:itext:2.1.7.js6'
    implementation 'javax.annotation:javax.annotation-api:1.3.2'
    implementation 'com.google.zxing:core:3.3.2'
}

test {
    useJUnitPlatform()
    maxParallelForks = Runtime.runtime.availableProcessors() / 2 ?: 1
}

